# stretchable

./: .gitignore  .readthedocs.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  css.xml  debug_fixture.py  demo_grid.py  demo_margins.py  parsetest.py  proxy.py  pyproject.toml  run_fixture.py  targets.xlsx  test.css  test.html  test.py  test2.py  test_fixture.py  test_manual.py  test_taffy.py  tests.xml  teststyles.py  testxml.py  ~$targets.xlsx
.github/: release.yml
.github/workflows/: add-tests.yml  build-publish-v2.yml  build-publish.yml  deploy.yml  test.yml
demos/: demo1.py  example.py
docs/source/: api.rst  conf.py  examples.md  glossary.md  index.md  layouts.md  license.md  overview.md  test.py
src/: lib-stretch.rs  lib.rs
src/stretchable/: __init__.py  context.py  core.py  exceptions.py  node.py  parser.py  stretch.py  style.py
tests/: conftest.py  test_fixtures.py  test_layout.py  test_memleaks.py  test_node.py  test_placeholder.py  test_styles.py
tests/fixtures/: absolute_aspect_ratio_aspect_ratio_overrides_height_of_full_inset.html  absolute_aspect_ratio_fill_min_height.html  absolute_child_with_max_height.html  absolute_layout_align_items_and_justify_content_center_and_right_position.html  absolute_layout_align_items_and_justify_content_center_and_top_position.html  absolute_layout_align_items_and_justify_content_flex_end.html  absolute_layout_align_items_center.html  absolute_layout_align_items_center_on_child_only.html  absolute_layout_in_wrap_reverse_column_container_flex_end.html  absolute_layout_percentage_bottom_based_on_parent_height.html  absolute_layout_width_height_end_bottom.html  absolute_layout_width_height_start_top_end_bottom.html  absolute_layout_within_border.html  absolute_minmax_bottom_right_max.html  absolute_minmax_bottom_right_min_max.html  absolute_minmax_bottom_right_min_max_preferred.html  absolute_padding_border_overrides_max_size.html  align_baseline_child.html  align_baseline_child_margin_percent.html  align_baseline_double_nested_child.html  align_baseline_nested_child.html  align_content_flex_start.html  (+203 more)
tests/fixtures.stretch/: absolute_layout_align_items_and_justify_content_center_and_bottom_position.html  absolute_layout_align_items_and_justify_content_center_and_left_position.html  absolute_layout_no_size.html  align_baseline.html  align_flex_start_with_shrinking_children.html  align_items_center.html  align_items_center_child_with_margin_bigger_than_parent.html  align_items_center_with_child_top.html  align_items_min_max.html  flex_basis_flex_grow_column.html  flex_basis_unconstraint_column.html  flex_grow_in_at_most_container.html  flex_grow_within_constrained_max_column.html  flex_wrap_children_with_min_main_overriding_flex_basis.html  justify_content_column_min_height_and_margin_bottom.html  justify_content_column_min_height_and_margin_top.html  justify_content_overflow_min_max.html  justify_content_row_center.html  justify_content_row_max_width_and_margin.html  justify_content_row_space_between.html  margin_auto_left_child_bigger_than_parent.html  margin_left.html  margin_with_sibling_column.html  margin_with_sibling_row.html  max_height.html  nested_overflowing_child_in_constraint_parent.html  padding_center_child.html  padding_flex_child.html  percentage_multiple_nested_with_padding_margin_and_percentage_values.html  percentage_size_based_on_parent_inner_size.html  relative_position_should_not_nudge_siblings.html  rounding_fractial_input_3.html  size_defined_by_child.html  wrap_reverse_row_align_content_center.html
tests/fixtures.taffy/: absolute_aspect_ratio_fill_height.html  absolute_aspect_ratio_fill_max_height.html  absolute_aspect_ratio_fill_max_width.html  absolute_layout_align_items_center.html  absolute_layout_in_wrap_reverse_column_container.html  absolute_layout_in_wrap_reverse_column_container_flex_end.html  absolute_layout_in_wrap_reverse_row_container.html  absolute_layout_percentage_bottom_based_on_parent_height.html  absolute_layout_start_top_end_bottom.html  absolute_layout_width_height_end_bottom.html  absolute_layout_width_height_start_top_end_bottom.html  absolute_margin_bottom_left.html  absolute_minmax_top_left_bottom_right_min_max.html  align_baseline.html  align_baseline_child_multiline_override.html  align_baseline_child_padding.html  align_baseline_column.html  align_baseline_multiline_column2.html  align_baseline_multiline_row_and_column.html  align_content_flex_end.html  align_content_flex_start_with_flex.html  align_content_not_stretch_with_align_items_stretch.html  align_content_space_between_wrapped.html  align_content_spacebetween.html  align_content_stretch_column.html  align_content_stretch_row_with_flex.html  align_content_stretch_row_with_margin.html  align_content_stretch_row_with_single_row.html  align_flex_start_with_shrinking_children_with_stretch.html  align_flex_start_with_stretching_children.html  align_items_center_child_with_margin_bigger_than_parent.html  align_items_flex_end_child_with_margin_bigger_than_parent.html  align_items_stretch_min_cross.html  android_news_feed.html  aspect_ratio_flex_column_stretch_fill_max_width.html  aspect_ratio_flex_row_fill_width.html  aspect_ratio_flex_row_fill_width_flex.html  border_container_match_child.html  display_none_with_margin.html  display_none_with_position.html  (+134 more)
(+1528 files in other folders)
