[package]
name = "stretchable"
version = "1.0.0-a1"
edition = "2021"
authors = ["Kenneth Trelborg Vestergaard"]
description = "Target-agnostic cross-platform layout library based on Taffy"

[lib]
name = "stretchable"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["abi3-py38", "extension-module"] }
# pyo3 = { version = "0.16.6", features = ["abi3-py37", "extension-module"] }
dict_derive = "0.5.0"
log = "0.4"
pyo3-log = ">=0.9.0, <1.0"
taffy = ">=0.3.18, <0.4"

