[package]
name = "stretchable"
version = "1.0.0-a1"
edition = "2021"
authors = ["Kenneth Trelborg Vestergaard"]
description = "Layout library for Python (based on Taffy, a rust-powered implementation of CSS Grid/Flexbox)"
rust-version = "1.80"

[lib]
name = "stretchable"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["abi3-py38", "extension-module"] }
dict_derive = "0.5.0"
log = "0.4"
pyo3-log = ">=0.9.0, <1.0"
taffy = "=0.6.0"
