[package]
name = "stretchable"
version = "1.2.0"
edition = "2021"
authors = ["Kenneth Trelborg Vestergaard"]
description = "Layout library for Python (based on Taffy, a rust-powered implementation of CSS Grid/Flexbox)"
# Notes on rust version:
#   v1.80 is the latest version supported by musllinux 1.2
#   v1.78 is the latest version currently supported by readthedocs
rust-version = "1.78"

[lib]
name = "stretchable"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.6", features = ["abi3-py38", "extension-module", "gil-refs"] }
dict_derive = "0.6.0"
log = ">=0.4,<0.5"
pyo3-log = ">=0.9.0, <1.0"
taffy = "0.7.5"
