[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "stretchable"
requires-python = ">=3.8"
keywords = ["flexbox", "grid", "block", "stretch", "css", "layout"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs>=23.1.0,<24.0",
    ]

[tool.maturin]
python-source = "src"
module-name = "stretchable.taffylib"

[project.optional-dependencies]
build = [
    "maturin>=1.1,<2.0",
    "build",
    "twine",
]
test = [
    "pytest",
    "pytest-cache",
    "pytest-cov",
    "pytest-html",
    "hypothesis",
    "selenium",
    ]
docs = [
    "sphinx",
    "myst-parser",
    "furo",
    "sphinx-copybutton",
    "readthedocs-sphinx-search",
]

[project.urls]
Homepage = "https://github.com/mortencombat/stretchable"
