[build-system]
requires = ["maturin>=1.7.4,<2.0"]
build-backend = "maturin"

[project]
name = "stretchable"
requires-python = ">=3.10"
keywords = ["flexbox", "grid", "block", "stretch", "css", "layout"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "attrs>=24.0,<25.0",
    "tinycss2>=1.4,<2.0",
    ]

[tool.maturin]
python-source = "src"
module-name = "stretchable.taffylib"

[project.optional-dependencies]
build = [
    "maturin>=1.7.4,<2.0",
    "build",
    "twine",
]
test = [
    "pytest",
    "pytest-cache",
    "pytest-cov",
    "pytest-html",
    "hypothesis",
    "selenium",
    ]
docs = [
    "sphinx",
    "myst-parser",
    "furo",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx_design>=0.5,<1.0",
    "sphinxcontrib-mermaid>=0.9.2,<1.0",
]

[project.urls]
Homepage = "https://stretchable.readthedocs.io/en/latest/"
Documentation = "https://stretchable.readthedocs.io/en/latest/"
Source = "https://github.com/mortencombat/stretchable"
Tracker = "https://github.com/mortencombat/stretchable/issues"
